--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="card">
                     <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Eu sendo saudável-amo </h5>
+                        <h5 class="card-title">Eu sendo saudável-amo</h5>
                         <p class="card-text">Uma das coisas que mais sou apaixonada é comer coisas diferentes que eu sei
                           que vão me fazer bem. Esse é um dos motivos pelo qual eu adoro comer frutas, verduras, legumes,
                           frutos, saudável no geral. Tenho um estômago bem sensível e percebi que depois que comecei a me
@@ -64,12 +64,10 @@
                 <div class="card">
                     <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
-                        </h5>
-                        <p class="card-text">EEste projeto Scratch cria uma experiência interativa educativa sobre
-                            astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
-                            forma da Terra através de cenários dinâmicos e diálogos informativos.
-                        </p>
+                        <h5 class="card-title">Meu modelo é o céu</h5>
+                        <p class="card-text">Sou alguém que ama fotografar paisagens, principalmente a passagem do dia para a noite.
+                            Registrar esses momentos me faz refletir sobre meus próprios pensamentos ao tirar a foto, o que eu preciso
+                            mudar e aprimorar na minha vida. É uma verdadeira terapia.</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
                             o projeto</button>
                     </div>
