--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="IMG_20250408_175302869.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Meu personagem e desenho favoritos</h5>
                         <p class="card-text">Sempre gostei muito de desenhos animados, já que fui uma criança criada com canais de TV 
