--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!-- Projeto 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="IMG_20250518_153516498.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Eu sendo saudável-amo</h5>
                         <p class="card-text">Uma das coisas que mais sou apaixonada é comer coisas diferentes que eu sei
