--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Júlia" class="rounded-circle" width="150" height="150"
+        <img src="IMG_20250530_193824_654~3.jpg" alt="avatar da Júlia" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Júlia_</p>
         <h1>Eu sou aluna</h1>
