--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <!-- Projeto 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="IMG_20250608_155155_053.webp" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Meu modelo é o céu</h5>
                         <p class="card-text">Sou alguém que ama fotografar paisagens, principalmente a passagem do dia para a noite.
